apps/homebridge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebrige-ingress
  namespace: homebridge
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: homebridge.k8s.s6n.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homebridge
            port:
              number: 80
    tls:
    - hosts:
      - homebridge.k8s.s6n.jp
      secretName: argocd-ingress-tls
